[package]
name = "bevy-axes-gizmo"
description = "A tiny Bevy plugin for an axes gizmo."
version = "0.2.0"
repository = "https://github.com/maximsnoep/bevy-axes-gizmo"
authors = ["Snoep <maxim@snoep.io>"]
keywords = ["bevy", "gizmo", "plugin"]
edition = "2024"
license = "MIT"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = ["bevy_pbr"]